--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,9 +1,12 @@
 @import 'variables.css';
 
-* {
+*, *::before, *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+:root {
+    --headerHeight: 56px;
 }
 html {
     font-size: 10px;
